Workload_Generator/sample-deployment-resources/app2/app2-m3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: a2m3
  labels:
    app: a2m3
spec:
  containers:
  - name: a2m3
    image: samodha/dummy-microservice-test:a2m3
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
