Workload_Generator/sample-deployment-resources/app2/app2-m1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a2m1
  labels:
    app: a2m1
    service: a2m1
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a2m1
