Workload_Generator/sample-deployment-resources/app2/app2-m4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a2m4
  labels:
    app: a2m4
    service: a2m4
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: a2m4
