Workload_Generator/sample-deployment-resources/app2/app2-m2-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a2m2
spec:
  hosts:
  - "a2m2.app2.svc.cluster.local"
  http:
  - match:
    - uri:
        prefix: /DummyM/home
    - uri:
        prefix: /DummyM/getResults
    route:
    - destination:
        port:
          number: 8080
        host: a2m2
